--- a/graphicstext/source/threejs/vertex-groups-indexed.html
+++ b/graphicstext/source/threejs/vertex-groups-indexed.html
@@ -4,8 +4,8 @@
 <title>Three.js Using different materials on different faces</title>
 <style>
 </style>
-<script src="three.min.js"></script>
-<script>
+<script type="module">
+import * as THREE from "./script/three.module.min.js";
 
 /* This program is a variation on vertex-groups.html that uses
  * an indexed-face-set representation for the pyramid.  Because
@@ -207,10 +207,7 @@ function doKey(event) {
 function init() {
     try {
         canvas = document.getElementById("glcanvas");
-        renderer = new THREE.WebGL1Renderer( {
-              // (I am using a WebGL1Render here because somehow, on my
-              // computer, it respects the linewidth setting, while a
-              // WebGLRendered does not!)
+        renderer = new THREE.WebGLRenderer( {
             canvas: canvas,
             antialias: true
         } );
